# panoptes

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  docker-bake.hcl  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  pylint.yml
app/: __init__.py  config.py  dependencies.py  elastic_index.py  main.py  models.py
app/exceptions/: search.py
app/routers/: datasets.py  tenants.py  translations.py
app/services/datasets/: connectors.py
app/services/search/: dataclasses.py  elastic_index.py
app/tasks/: tree_facets.py
docs/: Dockerfile  openapi.yaml
