[project]
name = "fastapi-mt-mongo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jarno Bakker",email = "jarno.bakker@di.huc.knaw.nl"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "motor (>=3.7.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "elasticsearch (>=8.7.0,<9.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jmespath (>=1.0.1,<2.0.0)",
    "python-jsonpath (>=1.3.0,<2.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
